--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -5,8 +5,8 @@
     --card-bg: #1a1a1a;
     --text-primary: #ffffff;
     --text-secondary: #d5d5d5;
-    --accent-gold: #adadad;
-    --accent-hover: #5637d4;
+    --accent-gold: #82690F;
+    --accent-hover:#DADBEF;
     --font-main: 'Noto Sans Armenian', sans-serif;
     --transition: all 0.3s ease;
 }
